feat(sidebar): implemented side drawer

--- a/src/components/Navigation/NavItems/NavItem/NavItem.css
+++ b/src/components/Navigation/NavItems/NavItem/NavItem.css
@@ -1,26 +1,47 @@
 .NavItem {
-    margin: 0;
+    margin: 10px 0;
     box-sizing: border-box;
-    height: 100%;
-
-    display: flex;
-    align-items: center;
+    width: 100%;
+    display: block;
 }
 
 .NavItem a {
-    color: #ffff;
-    text-decoration: none;
-    height: 100%;
-    padding: 16px 10px;
-    border-bottom: 4px solid transparent;
-    box-sizing: border-box;
+    width: 100%;
+    color: #8f5c2c;
     display: block;
+    text-decoration: none;
+    box-sizing: border-box;
 }
 
 .NavItem a:hover,
 .NavItem a:active,
 .NavItem a.active {
-    background-color: #8f5c2c;
-    border-bottom: 4px solid #40a4c8;
-    color: #fff;
+    color: #40a4c8;
+}
+
+
+@media (min-width: 500px) {
+    .NavItem {
+        margin: 0;
+        height: 100%;
+        width: auto;
+
+        display: flex;
+        align-items: center;
+    }
+
+    .NavItem a {
+        color: #fff;
+        height: 100%;
+        padding: 16px 10px;
+        border-bottom: 4px solid transparent;
+    }
+
+    .NavItem a:hover,
+    .NavItem a:active,
+    .NavItem a.active {
+        background-color: #8f5c2c;
+        border-bottom: 4px solid #40a4c8;
+        color: #fff;
+    }
 }
