--- a/src/components/Navigation/NavItems/NavItems.css
+++ b/src/components/Navigation/NavItems/NavItems.css
@@ -4,7 +4,14 @@
     list-style: none;
 
     display: flex;
+    flex-flow: column;
     align-items: center;
 
     height: 100%;
+}
+
+@media (min-width: 500px) {
+    .NavItems {
+        flex-flow: row;
+    }
 }
