--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -25,3 +25,9 @@
     outline: none;
     background-color: #ccc;
 }
+
+
+.Invalid {
+    border: 1px solid #f00;
+    background-color: #fda494;
+}
