--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -4,30 +4,52 @@
     box-sizing: border-box;
 }
 
-.Label {
-    font-weight: bold;
+.Label,
+.Hint {
     display: block;
-    margin-bottom: 8px;
+    text-align: left;
+
+    margin: 0;
+    padding: 0;
+}
+
+.Label {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 4px;
+}
+
+.Hint {
+    font-size: 12px;
+    color: #586069;
+    margin-top: 4px;
 }
 
 .InputElement {
-    outline: none;
-    border: 1px solid #ccc;
-    background-color: #fff;
-    font: inherit;
-    padding: 6px 10px;
     display: block;
-    width: 100%;
     box-sizing: border-box;
+
+    width: 100%;
+    height: 35px;
+    padding: 6px 10px;
+
+    outline: none;
+
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+
+    font: inherit;
 }
 
 .InputElement:focus {
     outline: none;
-    background-color: #ccc;
+    background-color: #fff;
+    border-color: #703b12;
 }
 
 
 .Invalid {
     border: 1px solid #f00;
-    background-color: #fda494;
+    background-color: #fff9f8;
 }
