feat(UI): changed main colors

--- a/src/components/Burger/BuildControls/BuildControls.css
+++ b/src/components/Burger/BuildControls/BuildControls.css
@@ -1,6 +1,6 @@
 .BuildControls {
     width: 100%;
-    background-color: #cf8f2e;
+    background-color: #e5cb7a;
 
     display: flex;
     flex-flow: column;
