--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -45,7 +45,7 @@
 .InputElement:focus {
     outline: none;
     background-color: #fff;
-    border-color: #703b12;
+    border-color: #01538a;
 }
 
 
