--- a/src/components/Navigation/Toolbar/Toolbar.css
+++ b/src/components/Navigation/Toolbar/Toolbar.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
 
-    background-color: #703b09;
+    background-color: #01538a;
     display: flex;
     justify-content: space-between;
     align-items: center;
