--- a/src/components/Auth/SignIn/SignIn.css
+++ b/src/components/Auth/SignIn/SignIn.css
@@ -1,20 +1,6 @@
 .SignIn {
     width: 400px;
-    padding: 20px;
-    margin: 20px auto;
-
-    text-align: center;
-
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-    box-shadow: 0 1px 1px #ccc;
-}
-
-.SignIn .Title {
-    display: block;
-    text-align: left;
-    font-size: 20px;
+    margin: 0 auto;
 }
 
 .SignIn .Hint {
@@ -30,6 +16,6 @@
 
 @media (min-width: 600px) {
     .SignIn {
-        width: 500px;
+        width: 300px;
     }
 }
