--- a/src/containers/Checkout/ContactData/ContactData.css
+++ b/src/containers/Checkout/ContactData/ContactData.css
@@ -1,11 +1,5 @@
 .ContactData {
-    margin: 20px auto;
-    width: 80%;
-    text-align: center;
-    box-shadow: 0 2px 3px #ccc;
-    border: 1px solid #ccc;
-    padding: 10px;
-    box-sizing: border-box;
+    margin: 0 auto;
 }
 
 @media (min-width: 600px) {
