--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -4,25 +4,15 @@
     box-sizing: border-box;
 }
 
-.Label,
 .Hint {
     display: block;
     text-align: left;
 
-    margin: 0;
+    margin: 0 4px 0 0;
     padding: 0;
-}
 
-.Label {
-    font-size: 14px;
-    font-weight: bold;
-    margin-bottom: 4px;
-}
-
-.Hint {
     font-size: 12px;
     color: #586069;
-    margin-top: 4px;
 }
 
 .InputElement {
